refactor scan job

--- a/terraform/Jenkinsfile
+++ b/terraform/Jenkinsfile
@@ -57,7 +57,8 @@ pipeline {
                     steps {
                         script {
                             sh '''
-                            ./tfsec-linux-amd64 .
+                            cd terraform
+                            tfsec .
                             '''
                         }
                     }
